[gd_scene load_steps=12 format=2]

[ext_resource path="res://Graphics/Enemies/Enemy_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Deviling.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/Stats.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Enemies/HitBox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 1 )

[node name="Deviling" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
moveSpeedMax = 50

[node name="Stats" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[node name="LeftWallDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWallDetection"]
position = Vector2( -7, 6 )
shape = SubResource( 4 )

[node name="RightWallDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWallDetection"]
position = Vector2( 7, 6 )
shape = SubResource( 5 )

[node name="LeftEdgeDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEdgeDetection"]
position = Vector2( -8, 16 )
shape = SubResource( 6 )

[node name="RightEdgeDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEdgeDetection"]
position = Vector2( 8, 16 )
shape = SubResource( 7 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="LeftWallDetection" to="." method="_on_LeftWallDetection_body_entered"]
[connection signal="body_entered" from="RightWallDetection" to="." method="_on_RightWallDetection_body_entered"]
[connection signal="body_exited" from="LeftEdgeDetection" to="." method="_on_LeftEdgeDetection_body_exited"]
[connection signal="body_exited" from="RightEdgeDetection" to="." method="_on_RightEdgeDetection_body_exited"]
